fixed overflow issue

--- a/src/styles/components/_projectBox.scss
+++ b/src/styles/components/_projectBox.scss
@@ -17,7 +17,7 @@
 
 .panel-collapse {
   // max-height: 540px;
-  // overflow: hidden;
+  overflow: hidden;
   transition: max-height 0.2s ease;
   // @media (min-width: 1000px) {
   //   height: 540px;
